--- a/index.html
+++ b/index.html
@@ -1,39 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Number Guesser</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <script src="scripts.js"></script>
-  <link rel="stylesheet" href="style.css">
-  <!--[if IE]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Number Guesser</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <!--[if IE]>
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
 
-<body>
-<header>
-    <h1><strong>Number</strong> Guesser</h1>
+  <body>
+    <header>
+      <h1><strong>Number</strong> Guesser</h1>
+    </header>
+    <div id="game-wrap">
+      <section id="slidecontainer">
+        <input type="range" class="slider" id="myRange" min="0" max="100" value="100" >
+        <p>Up to: <span id="maxNum">100</span></p>
+        <button type="button" id="setMax">Set Your Max Range</button>
+      </section>
 
-</header>
-<form>
-  <fieldset>
-  <label for="guess">
-    <input type="text" id="guess" placeholder="Enter Your Guess">
-  </label>
-  <button id="makeGuess" type="button" >Guess</button>
-  <button>Clear</button>
-  </fieldset>
-</form>
+      <form id="numberform" action="" onsubmit="return checkInp()" style="display: none;">
+        <fieldset>
+        <label for="guess">
+          <input type="text" id="guess" placeholder="Enter Your Guess">
+        </label>
+        <button class="makeGuess disabled" type="button">Guess</button>
+        <button class="clearBtn disabled" type="reset" value="Clear">Clear</button>
+        </fieldset>
+      </form>
 
-<section>
-  <h2>Your Last Guess Was</h2>
-  <strong id="last-guess">35</strong>
-  <h2 id="result-response">That was too high!</h2>
-  <button id="reset-button">Reset</button>
-</section>
-
-
-
-</body>
+      <section id="guessResponses"  style="display: none;">
+        <h2 class="guessedH2" style="visibility: hidden;">Your Last Guess Was</h2>
+        <strong id="last-guess">Make a Guess</strong>
+        <h2 id="result-response"></h2>
+        <button type="button" class="reset-button disabled" >Reset</button>
+      </section>
+    </div>
+    <script src="scripts.js"></script>
+  </body>
 </html>
